--- a/firmware/brio_stepper_driver/Makefile
+++ b/firmware/brio_stepper_driver/Makefile
@@ -157,7 +157,7 @@ endif
 CFLAGS += -MMD -MP -MF"$(@:%.o=%.d)"
 
 # compile g++ flags
-CXXFLAGS = $(MCU) $(CXX_DEFS) $(CXX_INCLUDES) $(OPT) -Wall -fdata-sections -ffunction-sections
+CXXFLAGS = $(MCU) $(CXX_DEFS) $(CXX_INCLUDES) $(OPT) -std=c++17 -Wall -fdata-sections -ffunction-sections
 
 #######################################
 # LDFLAGS
