--- a/firmware/brio_main/platformio.ini
+++ b/firmware/brio_main/platformio.ini
@@ -13,3 +13,4 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+lib_deps = etlcpp/Embedded Template Library@^20.35.12
