--- a/firmware/brio_main/platformio.ini
+++ b/firmware/brio_main/platformio.ini
@@ -13,4 +13,8 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-lib_deps = etlcpp/Embedded Template Library@^20.35.12
+lib_deps = 
+	etlcpp/Embedded Template Library@^20.35.12
+	nanopb/Nanopb@^0.4.7
+custom_nanopb_protos =
+    +<proto/main.proto>
