:sparkles: add brio_msgs dependency

--- a/brio_driver/package.xml
+++ b/brio_driver/package.xml
@@ -12,6 +12,7 @@
   <build_depend>protobuf-dev</build_depend>
   <!-- <build_depend>libprotobuf-dev</build_depend> -->
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>brio_msgs</build_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
